--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorBrandBlack">#000000</color>
     <color name="colorBrandDefaultElement">#DD6600</color>
     <color name="colorBrandYellow">#FFFF77</color>
+    <color name="colorBrandSelectedMenu">#D0D0D0</color>
 
     <color name="colorWhite">#ffffff</color>
     <color name="lightGray1">#BDBDBD</color>
