--- a/MeWSync/app/src/main/res/views/activities/layout/x02_activity_device.xml
+++ b/MeWSync/app/src/main/res/views/activities/layout/x02_activity_device.xml
@@ -14,10 +14,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
                 android:id="@+id/activity_device_toolbar"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/actionbar_bg"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent" />
+                android:layout_width="match_parent">
+            <!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                          android:orientation="horizontal"
+                          android:layout_width="80dp"
+                          android:layout_height="match_parent">
+                <ImageButton
+                        android:layout_weight="0"
+                        android:background="@null"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center|start"
+                        android:id="@+id/menuButton"/>
+            </LinearLayout-->
+        </androidx.appcompat.widget.Toolbar>
 
         <!--LinearLayout
                 android:orientation="horizontal"
