--- a/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_passwords.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_passwords.xml
@@ -27,11 +27,11 @@
                  android:layout_weight="1"
                  android:visibility="visible"/>
     </LinearLayout>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addNewPasswordElementBtn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:backgroundTint="@color/colorBrandDark1"/>
+            app:backgroundTint="@color/colorBrandDark1"/-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
