--- a/MeWSync/app/src/main/res/values/styles.xml
+++ b/MeWSync/app/src/main/res/values/styles.xml
@@ -15,11 +15,11 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="RoundButtonTheme" parent="Theme.AppCompat.Light">
-        <item name="android:textColor">#555555</item>
+        <item name="android:textColor">#FFFFFF</item>
         <item name="android:minHeight">77dp</item>
         <item name="android:minWidth">77dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">36sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:background">@drawable/round_button_for_pinpad_bg</item>
     </style>
@@ -34,6 +34,16 @@
     </style>
 
     <style name="searchActionBarTheme" parent="Widget.AppCompat.SearchView">
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorBrandWhite</item>
+    </style>
+
+    <style name="Theme.Transparent" parent="Theme.AppCompat">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/colorBrandTransparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowActionBar">false</item>
     </style>
 </resources>
