--- a/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_passwords.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_passwords.xml
@@ -11,13 +11,13 @@
                   android:background="@drawable/rec_view_list_item_bg">
         <com.mewhpm.mewsync.ui.recyclerview.impl.RecyclerViewPasswordsTreeImpl
                 android:id="@+id/listRVPasswords1"
-                android:name="com.mewhpm.mewsync.fragments.DevicesFragment"
+                android:name="com.mewhpm.mewsync.fragments.PasswordsRootFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="0dp"
                 android:layout_marginRight="0dp"
                 android:layout_weight="0"
-                tools:context=".fragments.DevicesFragment"
+                tools:context=".fragments.PasswordsRootFragment"
                 tools:listitem="@layout/x01_recyclerview_pair_element"
                 android:visibility="gone"/>
         <include layout="@layout/x00_no_items_in_list"
