--- a/MeWSync/app/src/main/res/views/other/layout/x02_nav_view_header.xml
+++ b/MeWSync/app/src/main/res/views/other/layout/x02_nav_view_header.xml
@@ -9,9 +9,12 @@
               android:padding="1dp"
               android:background="@color/colorBrandDark1">
     <ImageView
-            android:src="@drawable/mewlogo"
-            android:layout_height="56dp" android:id="@+id/imageView2"
-            android:adjustViewBounds="true" android:layout_width="wrap_content"/>
+            android:src="@drawable/mewlogo2"
+            android:layout_height="56dp"
+            android:id="@+id/imageView2"
+            android:adjustViewBounds="true"
+            android:layout_margin="4dp"
+            android:layout_width="wrap_content"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -26,13 +29,13 @@
                 android:fontFamily="sans-serif"
                 android:paddingStart="14dp"
                 android:gravity="center|start"
-                android:textColor="@color/colorWhite"/>
+                android:textColor="@color/colorBrandWhite"/>
         <TextView
                 android:text="@string/hardware_password_manager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorBrandWhite"
                 android:paddingStart="16dp"
                 android:textSize="12sp"/>
     </LinearLayout>
