--- a/MeWSync/app/src/main/res/views/activities/layout/x01_activity_main.xml
+++ b/MeWSync/app/src/main/res/views/activities/layout/x01_activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content" android:gravity="center_vertical" android:padding="7dp"
             android:background="@color/colorBrandDark1">
         <ImageView
-                android:src="@drawable/mewlogo"
+                android:src="@drawable/mewlogo2"
                 android:layout_height="76dp" android:id="@+id/imageView2"
                 android:adjustViewBounds="true" android:layout_width="wrap_content" android:padding="6dp"/>
         <LinearLayout
@@ -27,19 +27,19 @@
                     android:id="@+id/textView"
                     android:textSize="36sp" android:textStyle="bold" android:fontFamily="sans-serif"
                     android:paddingStart="16dp" android:gravity="center|start"
-                    android:textColor="@color/colorWhite"/>
+                    android:textColor="@color/colorBrandWhite"/>
             <TextView
                     android:text="@string/hardware_password_manager"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView2"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBrandWhite"
                     android:paddingStart="20dp"
                     android:textSize="14sp"/>
         </LinearLayout>
     </LinearLayout>
-    <include android:layout_width="match_parent" android:layout_height="match_parent" layout="@layout/x00_wait_fragment"
-             android:layout_weight="99" android:id="@+id/waitDummy1"/>
+    <!--include android:layout_width="match_parent" android:layout_height="match_parent" layout="@layout/x00_wait_fragment"
+             android:layout_weight="99" android:id="@+id/waitDummy1"/-->
     <FrameLayout
             android:layout_weight="99"
             android:layout_width="match_parent"
@@ -50,8 +50,8 @@
             android:layout_weight="0"
             app:menu="@menu/bottom_nav_block"
             app:itemBackground="@color/colorBrandDark1"
-            app:itemIconTint="@color/colorWhite"
-            app:itemTextColor="@color/colorWhite"
+            app:itemIconTint="@color/colorBrandWhite"
+            app:itemTextColor="@color/colorBrandWhite"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:id="@+id/bottomView" android:background="@color/colorBrandDark1" android:visibility="gone"/-->
