--- a/MeWSync/app/src/main/res/views/listelements/layout/x01_recyclerview_pair_element.xml
+++ b/MeWSync/app/src/main/res/views/listelements/layout/x01_recyclerview_pair_element.xml
@@ -4,14 +4,16 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center"
-              android:padding="8dp"
+              android:padding="5dp"
               android:background="@drawable/rec_view_list_item_bg">
 
     <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:id="@+id/element_icon"
-            android:layout_weight="0" android:padding="8dp"/>
+            android:layout_weight="0"
+            android:padding="0dp"
+            android:layout_margin="0dp"/>
     <LinearLayout
             android:orientation="vertical" android:layout_weight="1"
             android:layout_width="match_parent"
@@ -19,12 +21,12 @@
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:text=""
                 android:id="@+id/element_title"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="14dp"
                 android:layout_marginTop="4dp"/>
         <TextView
                 android:id="@+id/element_text"
@@ -32,7 +34,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:text=""
-                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginEnd="4dp"/>
     </LinearLayout>
 </LinearLayout>
