--- a/MeWSync/app/src/main/res/views/activities/layout/x00_initial_activity_view.xml
+++ b/MeWSync/app/src/main/res/views/activities/layout/x00_initial_activity_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:background="@color/colorBrandBlack"
+              android:id="@+id/initContainerBox1">
     <include android:layout_width="match_parent" android:layout_height="match_parent" layout="@layout/x00_wait_fragment"
              android:layout_weight="99" android:id="@+id/waitDummy1"/>
 </LinearLayout>
