--- a/MeWSync/app/src/main/res/views/activities/layout/x01_activity_main.xml
+++ b/MeWSync/app/src/main/res/views/activities/layout/x01_activity_main.xml
@@ -1,58 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
+        android:layout_weight="99"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_holder" android:visibility="visible">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:gravity="center_vertical" android:padding="7dp"
-            android:background="@color/colorBrandDark1">
-        <ImageView
-                android:src="@drawable/mewlogo2"
-                android:layout_height="76dp" android:id="@+id/imageView2"
-                android:adjustViewBounds="true" android:layout_width="wrap_content" android:padding="6dp"/>
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <TextView
-                    android:text="@string/mew_hpm"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView"
-                    android:textSize="36sp" android:textStyle="bold" android:fontFamily="sans-serif"
-                    android:paddingStart="16dp" android:gravity="center|start"
-                    android:textColor="@color/colorBrandWhite"/>
-            <TextView
-                    android:text="@string/hardware_password_manager"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView2"
-                    android:textColor="@color/colorBrandWhite"
-                    android:paddingStart="20dp"
-                    android:textSize="14sp"/>
-        </LinearLayout>
-    </LinearLayout>
-    <!--include android:layout_width="match_parent" android:layout_height="match_parent" layout="@layout/x00_wait_fragment"
-             android:layout_weight="99" android:id="@+id/waitDummy1"/-->
-    <FrameLayout
-            android:layout_weight="99"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/fragment_holder" android:visibility="gone">
-
-    </FrameLayout>
-    <!--com.mewhpm.mewsync.ui.BottomView
-            android:layout_weight="0"
-            app:menu="@menu/bottom_nav_block"
-            app:itemBackground="@color/colorBrandDark1"
-            app:itemIconTint="@color/colorBrandWhite"
-            app:itemTextColor="@color/colorBrandWhite"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:id="@+id/bottomView" android:background="@color/colorBrandDark1" android:visibility="gone"/-->
-</LinearLayout>
+</FrameLayout>
