--- a/MeWSync/app/src/main/res/views/fragments/layout/x00_wait_fragment.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x00_wait_fragment.xml
@@ -14,7 +14,7 @@
             android:paddingRight="14dp"
             android:textStyle="bold|italic"
             android:textSize="24sp"
-            android:textColor="@color/colorBrandDark1"
+            android:textColor="@color/colorBrandDefaultElement"
             android:gravity="center"
             android:layout_marginTop="32dp" android:layout_marginBottom="32dp"/>
 
@@ -25,6 +25,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:SpinKit_Color="@color/colorBrandDark1"
+            app:SpinKit_Color="@color/colorBrandDefaultElement"
             app:SpinKit_Style="Circle"/>
 </LinearLayout>
