--- a/MeWSync/app/src/main/res/views/fragments/layout/x01_ble_disovery_fragment.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x01_ble_disovery_fragment.xml
@@ -4,17 +4,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="32dp"
-        android:orientation="vertical"
-        android:minWidth="9999dp"
-        android:minHeight="9999dp">
+        android:orientation="vertical">
+    <include android:layout_width="match_parent" android:layout_height="wrap_content"
+             layout="@layout/x00_app_header" android:layout_weight="0"/>
     <com.mewhpm.mewsync.ui.recyclerview.impl.RecyclerViewBleDiscoveryImpl
             android:layout_weight="1"
             android:id="@+id/discoveryList"
             android:name="com.mewhpm.mewsync.fragments.DeviceDiscoveryFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragments.DeviceDiscoveryDialogFragment"
+            tools:context=".fragments.BleDiscoveryFragment"
             tools:listitem="@layout/x01_recyclerview_pair_element"/>
     <Button
             android:text="@string/stop_scanning"
@@ -23,6 +22,6 @@
             android:layout_weight="0"
             android:id="@+id/button" android:textSize="18sp" android:textStyle="bold"
             android:textColor="@color/colorBrandWhite" android:background="@color/colorBrandDark1"
-            android:layout_margin="4dp" android:gravity="center" android:paddingStart="12dp"
+            android:gravity="center" android:paddingStart="12dp"
             android:paddingEnd="16dp"/>
 </LinearLayout>
