--- a/MeWSync/app/src/main/res/views/fragments/layout/x00_pincode_fragment.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x00_pincode_fragment.xml
@@ -10,7 +10,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/pincodeFragmentTitle" android:layout_marginTop="32dp"
             android:layout_marginLeft="12dp" android:layout_marginRight="12dp" android:textSize="24sp"
-            android:textColor="@color/colorBrandDefaultElement" android:gravity="center" android:textStyle="bold"/>
+            android:textColor="@color/colorBrandDefaultElement" android:gravity="center" android:textStyle="bold"
+            android:fontFamily="@font/brand"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -18,7 +19,7 @@
         <View
                 android:layout_height="match_parent"
                 android:layout_width="80dp"
-                android:layout_weight="1"/>
+                android:layout_weight="0"/>
         <EditText
                 android:layout_weight="100"
                 android:layout_width="match_parent"
@@ -29,18 +30,18 @@
                 android:textStyle="bold" android:textSize="36sp"
                 android:gravity="center" android:layout_margin="8dp"
                 android:textIsSelectable="false" android:singleLine="true" android:enabled="false"
-                android:textAlignment="center" android:textColor="@color/colorBrandWhite"/>
+                android:textAlignment="center" android:textColor="@color/colorBrandWhite"
+                android:background="@color/colorBrandDark2"/>
         <ImageView
                 android:id="@+id/pincodeDeleteButton"
-                android:alpha="0.5"
-                android:layout_width="80dp"
+                android:layout_width="48dp"
                 android:layout_height="match_parent"
                 tools:srcCompat="@android:drawable/ic_input_delete"
-                android:layout_weight="1"
-                android:padding="20dp"/>
+                android:layout_weight="0"
+                android:alpha="0.5" android:layout_marginEnd="32dp"/>
     </LinearLayout>
     <TextView
-            android:text="Incorrect PIN-code. Please, try again."
+            android:text="@string/incorrect_pin_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/incorrectPinWarning"
             android:layout_marginBottom="10dp"
@@ -49,7 +50,7 @@
             android:textColor="@color/colorBrandDefaultElement"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:gravity="center"/>
+            android:gravity="center" android:textSize="18sp" android:fontFamily="@font/brand"/>
 
     <LinearLayout
             android:orientation="vertical"
@@ -68,7 +69,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="2"
@@ -76,7 +77,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="3"
@@ -84,7 +85,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_weight="100"
@@ -99,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="5"
@@ -107,7 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="6"
@@ -115,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_weight="100"
@@ -130,7 +131,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="8"
@@ -138,7 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="9"
@@ -146,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_weight="100"
@@ -162,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:enabled="true"
                     style="@style/RoundButtonTheme" android:textSize="24sp"
-                    android:textColor="@color/colorBrandDefaultElement"/>
+                    android:textColor="@color/colorBrandDefaultElement" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="0"
@@ -170,7 +171,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="true"
-                    style="@style/RoundButtonTheme" android:textSize="36sp"/>
+                    style="@style/RoundButtonTheme" android:textSize="36sp" android:fontFamily="@font/brand"/>
             <com.mewhpm.mewsync.ui.SquareButton
                     android:layout_weight="100"
                     android:text="OK"
@@ -179,7 +180,7 @@
                     android:layout_height="wrap_content"
                     android:enabled="true"
                     style="@style/RoundButtonTheme" android:textSize="24sp"
-                    android:textColor="@color/colorBrandDefaultElement"/>
+                    android:textColor="@color/colorBrandDefaultElement" android:fontFamily="@font/brand"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
