--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorBrandSelectedMenu">#D0D0D0</color>
     <color name="colorBrandDarkGray">#999999</color>
     <color name="colorBrandTransparent">#55000000</color>
+    <color name="colorBrandItemBorder">#E5E5E5</color>
 
     <color name="colorBrandWhite">#ffffff</color>
     <color name="lightGray1">#BDBDBD</color>
