--- a/MeWSync/app/src/main/res/views/fragments/layout/x01_known_devices_fragment.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x01_known_devices_fragment.xml
@@ -26,13 +26,13 @@
                     android:layout_weight="0"
                     tools:context=".fragments.DevicesFragment"
                     tools:listitem="@layout/x01_recyclerview_pair_element"
-                    android:visibility="gone"/>
-            <include layout="@layout/x00_no_items_in_list"
+                    android:visibility="visible"/>
+            <!--include layout="@layout/x00_no_items_in_list"
                      android:id="@+id/noItemsInList1"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
-                     android:visibility="visible"/>
+                     android:visibility="visible"/-->
         </LinearLayout>
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
