--- a/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_add_password.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_add_password.xml
@@ -6,6 +6,16 @@
                   android:orientation="vertical" android:padding="24dp">
 
         <TextView
+                android:text="@string/password_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView12"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textLongMessage"
+                android:ems="10"
+                android:id="@+id/editTextPassDescription"/>
+        <TextView
                 android:text="@string/url_for_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/textView11"/>
@@ -14,7 +24,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="textUri"
                 android:ems="10"
-                android:layout_marginBottom="24dp"
                 android:id="@+id/editTextPassURL"/>
 
         <TextView
@@ -29,16 +38,47 @@
                 android:layout_marginBottom="24dp"
                 android:id="@+id/editTextPassLogin"/>
 
-        <TextView
-                android:text="@string/password_description"
+        <CheckBox
+                android:text="@string/contain_digits"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView12"/>
+                android:layout_height="wrap_content" android:id="@+id/checkBoxDigits" android:layout_margin="4dp"
+                android:checked="true" android:enabled="false"/>
+        <CheckBox
+                android:text="@string/contain_lowercase_alphabet"
+                android:checked="true" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/checkBoxAlphaLower" android:layout_margin="4dp"/>
+        <CheckBox
+                android:text="@string/contain_uppercase_alphabet"
+                android:checked="true" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/checkBoxAlphaUpper" android:layout_margin="4dp"/>
+        <CheckBox
+                android:text="@string/contain_symbols"
+                android:checked="true" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/checkBoxSymbols" android:layout_margin="4dp"
+        />
+
+        <TextView
+                android:text="@string/minimum_password_length"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView1144" android:layout_marginTop="24dp"/>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textLongMessage"
+                android:inputType="numberDecimal"
                 android:ems="10"
-                android:id="@+id/editTextPassDescription"/>
+                android:text="16"
+                android:id="@+id/editTextMinLen"/>
+        <TextView
+                android:text="@string/maximum_password_length"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView1354"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:text="24"
+                android:id="@+id/editTextMaxLen"/>
 
     </LinearLayout>
 </ScrollView>
