--- a/MeWSync/app/src/main/res/views/other/layout/x00_keyboard_view_real.xml
+++ b/MeWSync/app/src/main/res/views/other/layout/x00_keyboard_view_real.xml
@@ -7,7 +7,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="1dp"
+        android:padding="4dp"
         android:layout_gravity="bottom">
     <com.mewhpm.mewsync.ui.recyclerview.impl.RecyclerViewForPasswordsKeyboard
             android:background="@drawable/keyboard_bg_and_border"
