--- a/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_add_directory.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x02_fragment_add_directory.xml
@@ -17,7 +17,7 @@
                 android:layout_marginBottom="24dp"
                 android:id="@+id/editTextDirectoryName"/>
 
-        <TextView
+        <!--TextView
                 android:text="@string/directory_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/textView12"/>
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textLongMessage"
                 android:ems="10"
-                android:id="@+id/editTextDirectoryDescription"/>
+                android:id="@+id/editTextDirectoryDescription"/-->
 
     </LinearLayout>
 </ScrollView>
