add qr-reader; add qr data parser;

--- a/MeWSync/app/src/main/res/views/fragments/layout/x01_known_devices_fragment.xml
+++ b/MeWSync/app/src/main/res/views/fragments/layout/x01_known_devices_fragment.xml
@@ -35,11 +35,26 @@
                      android:visibility="visible"/-->
         </LinearLayout>
     </LinearLayout>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addNewBleDevBtn1"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:backgroundTint="@color/colorBrandDark1"/>
+            android:layout_gravity="bottom|end">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addNewBleDevBtn2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:layout_margin="8dp"
+                android:layout_gravity="bottom|end"
+                app:backgroundTint="@color/colorBrandDarkGray"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addNewBleDevBtn1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:layout_margin="8dp"
+                app:backgroundTint="@color/colorBrandDefaultElement2"/>
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
